src/test/kalang-snippets/error/InitializationCheck.kl
num is uninitialized!@5
int num;
if ( "".equals(1) ) {
    num = 1;
}
num++;